--- a/contact.css
+++ b/contact.css
@@ -20,7 +20,7 @@ header {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   background-color: #0f0a3c;
+   background-color: hsl(72, 209, 204);
    position: sticky;
    top: 0;
    padding: 10px 50px;
@@ -29,7 +29,7 @@ header {
 }
 
 header p {
-   border: 1px solid white;
+   border: 1px solid #DC143C;
    padding: 2px 5px;
    font-size: 1.3em;
    font-weight: bold;
@@ -46,12 +46,12 @@ header p {
 
 .menu a {
    text-decoration: none;
-   color: white;
+   color: #DC143C;
 }
 
 .menu a:hover {
    text-decoration: underline;
-   color: white;
+   color: #FF0000;
    transition: 1s;
 }
 
@@ -62,11 +62,11 @@ main {
 
 main a {
    text-decoration: none;
-   color: #0f0a3c;
+   color: #DC143C;
 }
 
 #contactPage {
-   color: #0f0a3c;
+   color: #DC143C;
    display: flex;
    justify-content: space-between;
 }
@@ -106,7 +106,7 @@ h2 {
 
 input,
 #textarea {
-   border: 2px solid #0f0a3c;
+   border: 2px solid #DC143C;
    margin-bottom: 5px;
    padding: 10px;
 }
@@ -126,15 +126,15 @@ input,
 }
 
 button {
-   border: 2px solid #0f0a3c;
+   border: 2px solid #DC143C;
    padding: 10px;
    background-color: white;
-   color: #0f0a3c;
+   color: #DC143C;
    font-size: 1em;
 }
 
 button:hover {
-   background-color: #0f0a3c;
+   background-color: #DC143C;
    color: white;
    transition: 1s;
 }
@@ -161,7 +161,7 @@ button:hover {
 }
 
 footer {
-   background-color: #0f0a3c;
+   background-color: #DC143C;
    color: white;
    display: flex;
    justify-content: space-between;
@@ -175,7 +175,7 @@ footer p {
 
 footer a {
    text-decoration: none;
-   color: white;
+   color: #DC143C;
 }
 
 @media screen and (max-width: 540px) {
@@ -276,5 +276,14 @@ footer a {
 
    .socials2 {
       font-size: 24px;
+   }
+} 
+
+@media screen and (max-width: 375px) {
+   .introText{
+      display: flex;
+      flex-direction: row;
+      padding: 0;
+
    }
 }
